--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="hero-subtitle">探索技术核心，创造无限可能</div>
             <h1 class="hero-title">深潜内核<br>专业IT开发工作室</h1>
             <p class="hero-description">
-                我们是一支专注于系统软件开发和IT解决方案的专业团队。
+                我们是一支专注于系统软件开发和IT解决方案的不专业团队。
                 深潜内核工作室致力于深入技术底层，打造高性能、高可靠性的软件产品，
                 为客户提供创新的技术解决方案。
             </p>
@@ -569,7 +569,7 @@
                             </div>
                             <div class="contact-text-content">
                                 <div class="contact-label">邮箱</div>
-                                <div class="contact-value">contact@deepdivekernel.com</div>
+                                <div class="contact-value">3958965142@qq.com</div>
                             </div>
                         </div>
                         
@@ -589,7 +589,7 @@
                             </div>
                             <div class="contact-text-content">
                                 <div class="contact-label">工作时间</div>
-                                <div class="contact-value">周一至周五: 9:00 - 18:00</div>
+                                <div class="contact-value">全年无休，地球不爆炸我们不放假。😊</div>
                             </div>
                         </div>
                     </div>
